* fix the css to render properly on mobile

--- a/client/components/domains/register-domain-step/style.scss
+++ b/client/components/domains/register-domain-step/style.scss
@@ -268,9 +268,13 @@ body.is-section-signup.is-white-signup {
 		width: 16px;
 		height: 16px;
 		fill: var( --color-neutral-40 );
-		margin-right: 8px;
+		margin: 0 8px;
+		@include break-mobile {
+			margin-left: 0;
+		}
 	}
 	button {
+		display: contents;
 		margin-left: 5px;
 		color: var( --color-link );
 	}
